# prcxx

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake.yml
.github/workflows/: prcxx.yml
include/prcxx/: ActiveEvaluationChain.hpp  BaseObservable.hpp  BaseObserver.hpp  Concepts.hpp  DecoratableBase.hpp  Error.hpp  EvaluationChain.hpp  Expected.hpp  IDecoratable.hpp  IObservable.hpp  InvokableObservable.hpp  InvokableObserver.hpp  SourceLocation.hpp  ValueObservable.hpp  ValueObserver.hpp  property.hpp
source/: ActiveEvaluationChain.cpp  BaseObservable.cpp  BaseObserver.cpp  CMakeLists.txt  DecoratableBase.cpp  Error.cpp  EvaluationChain.cpp
test/: CMakeLists.txt  CycleDetectionTest.cpp  ErrorWithSourceLocation.cpp  ErrorWithSourceLocationTest.cpp  ExpectedComparisonTest.cpp  ExpectedConstructionTest.cpp  InvokableObserverTest.cpp  PropertyCastTest.cpp  PropertyComparisonTest.cpp  PropertyConstructionTest.cpp  PropertyGetterTest.cpp  PropertyResolvingTest.cpp  PropertySetterTest.cpp  StringMaker.hpp  ValueObserverTest.cpp  main.cpp  test.cpp
